5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4359/executions/1596_2894.log
== TEST (2019-03-27 15:27:12) 
-- CODE:
var=input("Instruções: 8 jogos, 45 o frete ")
print(float(?????))
-- ERROR:
File "XXXX", line 2
    print(float(?????))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:07:43) 
-- CODE:
var=input("Instruções: 8 jogos, 45 o frete ")
print(?????)
-- ERROR:
File "XXXX", line 2
    print(?????)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:10:57) 
-- CODE:
var=input("Instruções: 8 jogos, 45 o frete ")
print(?????)
-- ERROR:
File "XXXX", line 2
    print(?????)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
